--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="public/favicon.svg" type="image/x-icon" />
   </head>
   <body>
     <canvas id="world"></canvas>
