--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Подяка</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="public/favicon.svg" type="image/x-icon" />
   </head>
