feat: add random image pasting

--- a/index.html
+++ b/index.html
@@ -22,10 +22,7 @@
         </div>
 
         <div class="gift">
-          <img
-            class="gift_image"
-            src="https://placehold.co/600x400/eeeeee/000.png"
-          />
+          <img class="gift_image" />
         </div>
       </div>
     </div>
